--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#about" class="btn">About Me</a>
       </div>
       <div class="profile-card">
-        <div class="avatar"><img src="../assets/Visa (2).jpg" height="300px"></a></div><br>
+        <div class="avatar"><img src="./assets/Visa (2).jpg" height="300px"></a></div><br>
       </div>
     </div>
   </header>
@@ -100,17 +100,17 @@
       <p class="subtitle">Selected works that showcase my skills and creativity.</p>
       <div class="grid">
         <div class="card project-card">
-          <img alt="Project preview" />
+          <!-- <button><a href="#"></a>View my broject</button> -->
           <h3>Portfolio Website</h3>
           <p>A personal portfolio built using HTML and CSS.</p>
         </div>
         <div class="card project-card">
-          <img alt="Project preview" />
+        <!-- <button><a href=""></a>View my broject</button>   -->
           <h3> Growly Learning Management System</h3>
           <p>An LMS platform featuring courses, videos and user authentication.</p>
         </div>
         <div class="card project-card">
-          <img alt="Project preview" />
+        <!-- <button><a href="https://visalinin2810-cmyk.github.io/Amazon-static-page/"></a>View my broject</button>   -->
           <h3>amazon E-commers website</h3>
           <p>This project is built using only HTML and CSS. It focuses on clean layout.</p>
         </div>
@@ -152,8 +152,8 @@
         </div>
         <div class="cardes">
           <h3>Professional Links</h3>
-          <p><a href="#">Linkdin</a></p>
-          <p><a href="#">GitHub</a></p>
+          <p><a href="https://www.linkedin.com/in/visalini-nandhagopal-27872a397/">Linkdin</a></p>
+          <p><a href="https://github.com/visalinin2810-cmyk">GitHub</a></p>
           <p><a href="#">Portfolio</a></p>
         </div>
       </div>
